fix: adjust font sizes for improved readability in Welcome component

--- a/src/index.css
+++ b/src/index.css
@@ -82,7 +82,7 @@ body {
     }
 
     .dock-icon {
-      @apply size-10 sm:size-14 3xl:size-20 cursor-pointer;
+      @apply size-11 sm:size-14 3xl:size-20 cursor-pointer;
 
       img {
         @apply object-cover object-center;
